--- a/KrausxRGA/app.config
+++ b/KrausxRGA/app.config
@@ -19,7 +19,7 @@
         <value>http://192.168.1.16:74/KrausWarehouseServices.Service.RMA.Save.svc/SOA</value>
       </setting>
       <setting name="DrivePath" serializeAs="String">
-        <value>C:\Images</value>
+        <value>\\192.168.1.172\Macintosh HD\ftp_share\RGAImages</value>
       </setting>
       <setting name="UserNameForImagesLogin" serializeAs="String">
         <value>shiva5</value>
