Images save on Shared

--- a/KrausxRGA/app.config
+++ b/KrausxRGA/app.config
@@ -22,10 +22,10 @@
         <value>\\192.168.1.172\Macintosh HD\ftp_share\RGAImages</value>
       </setting>
       <setting name="UserNameForImagesLogin" serializeAs="String">
-        <value>shiva5</value>
+        <value> mediaserver</value>
       </setting>
       <setting name="UserPasswordForImages" serializeAs="String">
-        <value>avishiva</value>
+        <value>kraus2013</value>
       </setting>
     </KrausRGA.Properties.Settings>
   </applicationSettings>
