--- a/KrausxRGA/Properties/Settings.settings
+++ b/KrausxRGA/Properties/Settings.settings
@@ -15,10 +15,10 @@
       <Value Profile="(Default)">\\192.168.1.172\Macintosh HD\ftp_share\RGAImages</Value>
     </Setting>
     <Setting Name="UserNameForImagesLogin" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">shiva5</Value>
+      <Value Profile="(Default)"> mediaserver</Value>
     </Setting>
     <Setting Name="UserPasswordForImages" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">avishiva</Value>
+      <Value Profile="(Default)">kraus2013</Value>
     </Setting>
   </Settings>
 </SettingsFile>
