--- a/KrausxRGA/app.config
+++ b/KrausxRGA/app.config
@@ -43,6 +43,7 @@
           maxReceivedMessageSize="2147483647" />
         <binding name="BasicHttpBinding_IGet" allowCookies="true" maxBufferPoolSize="2147483647"
           maxReceivedMessageSize="2147483647" />
+        <binding name="BasicHttpBinding_IDelete" />
       </basicHttpBinding>
     </bindings>
     <client>
@@ -52,6 +53,9 @@
       <endpoint address="http://192.168.1.16:74/KrausWarehouseServices.Service.RMA.Save.svc/SOA"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISave"
         contract="SaveRMAServiceRefer.ISave" name="BasicHttpBinding_ISave" />
+      <endpoint address="http://192.168.1.16:74/KrausWarehouseServices.Service.RMA.Delete.svc/SOA"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IDelete"
+        contract="DeleteRMAServiceRef.IDelete" name="BasicHttpBinding_IDelete" />
     </client>
   </system.serviceModel>
 </configuration>
