--- a/KrausxRGA/KrausRGA.csproj
+++ b/KrausxRGA/KrausRGA.csproj
@@ -349,17 +349,17 @@
     <None Include="Service References\GetRMAServiceRef\service21.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\SaveRMAServiceRefer\KrausWarehouseServices.DTO.RMA.xsd">
+    <None Include="Service References\SaveRMAServiceRefer\KrausWarehouseServices.DTO.RMA1.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\SaveRMAServiceRefer\KrausWarehouseServices.DTO.Shipping.xsd">
+    <None Include="Service References\SaveRMAServiceRefer\KrausWarehouseServices.DTO.Shipping1.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\SaveRMAServiceRefer\service.wsdl" />
-    <None Include="Service References\SaveRMAServiceRefer\service.xsd">
+    <None Include="Service References\SaveRMAServiceRefer\service1.wsdl" />
+    <None Include="Service References\SaveRMAServiceRefer\service2.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\SaveRMAServiceRefer\service1.xsd">
+    <None Include="Service References\SaveRMAServiceRefer\service21.xsd">
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
